--- a/style.css
+++ b/style.css
@@ -670,7 +670,7 @@ section.visible {
     }
 
     .carousel-caption {
-        padding: 1rem;
+        padding: 1rem 1rem 3.5rem 1rem;
     }
     
     .carousel-caption h3 {
